[package]
name = "nbd"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
env_logger = "0.9.0"
fork = "0.1.19"
log = "0.4.17"
nix = { version = "0.24.1", default_features = false, features = ["ioctl"] }
num_enum = "0.5.7"
pipe = "0.4.0"
rand = "0.8.5"
readwrite = "0.2.0"
sudo = "0.6.0"
