[package]
name = "nbd"
version = "0.1.0"
edition = "2021"
default-run = "server"
license = "MIT"
keywords = ["nbd"]
categories = ["network-programming", "os::linux-apis"]
description = "Tools for interacting with the Linux Network Block Device (NBD)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
byteorder = "1.4.3"
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.1"
env_logger = "0.11.3"
fork = "0.2.0"
log = "0.4.17"
nix = { version = "0.29.0", default-features = false, features = ["ioctl"] }
num_enum = "0.7.3"
pipe = "0.4.0"
rand = "0.8.5"
readwrite = "0.2.0"
serial_test = "3.1.1"
sudo = "0.6.0"
